[package]
name = "waltz_cli"
version = "0.1.5"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
description = "Extract code blocks from Markdown and save them as files."
readme = "../Readme.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/asears/waltz"
documentation = "https://github.com/asears/waltz"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools::testing"]

[[bin]]
name = "waltz"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
waltz = { version = "0.4.0", path = "../waltz" }
pulldown-cmark = "0.9"
quicli = "0.4"

[dev-dependencies]
tempdir = "0.3"
unindent = "0.2"
assert_cli = "0.6"
difference = "2.0"

# [badges]
# travis-ci = { repository = "killercup/waltz" }
